--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,8 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.7
+install_requires =
+    pysftp==0.2.9
 
 [options.packages.find]
 where = src
