--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.8
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-COPY ./src/tenQ /app
+COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
+COPY ./src /app
 WORKDIR /app
 CMD ["python", "-m", "unittest"]
